--- a/projects.html
+++ b/projects.html
@@ -98,7 +98,7 @@
     </section> <!-- Close projectGallery Class -->
     
     <footer>
-        <p class="copyright">&copy; Lelija Lusas 2022. All rights reserved</p>
+        <p class="copyright">&copy; WRHS 2022. All rights reserved</p>
         <ul class="bottomNav">
             <li><a href="index.html">Home</a></li>
             <li class="divider">|</li>
