Modified styles and About me +some troubleshooting in other files

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="heroTextTop">
                 <h3>Hello,</h3>
                 <h3>My Name is</h3>
-                <h1 class="heroName"><em>Lelija Lusas</em></h1>
+                <h1 class="heroName">Lelija Lusas</h1>
             </div>  <!-- close heroTextTop class -->
             <div class="heroTextBottom">
                 <h4>Welcome to my</h4>
