--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
         </div>  <!-- close navbar links class -->
     </nav>  <!-- close navbar class -->
     
-    <section class="filler">
+    <section class="blogFiller">
         <h1>Currently working on blogs.</h1>
         <h3>Please come back soon.</h3>
     </section>
