Trouble Shooting on about me and styles (UNFINISHED)

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -32,10 +32,10 @@
     </nav>  <!-- close navbar class -->
     
     <section class="me">
-        <aside class="myPic">PlaceholderA</aside>
+        <aside class="myPic">About Me; Skills and Interests</aside>
         <div class="myText">
             <article class="character">Hello! As you might've already known from the branding of the portfolio, my name is Lelija. I am an aspiring artist and writer, as well as an animator (though I'm still learning). I am oddly enough, very good at science, despite my hobbies being centered around fictional worlds and characters. I have always been known for my love of art and fantasy, and I tend to get attention from people whenever an art project is mentioned in class.</article>
-            <article class="skills">Now, to go more in depth about my hobbies. When it comes to my art, it's usually fanart or some pencil or pen doodle of an odd creature. However, I seem to do best when I'm drawing horror, gore, or dragons, though I do like to draw characters from animes and books I've read. When it comes to my writing, I'm all over the place. I'm currently working on two stories right now, their titles are as following; Untitled Apocalyptic Fantasy Story(Untitled), and Demons; A Complete Guide to demonic Creatures. I am very excited to continue writing these books, since I think they both have great potential. If you are interested in my work, you can email me through leija.lusas@student.region16ct.org, or lusaslelija@gmail.com (my personal email).</article>
+            <article class="skills">Now, to go more in depth about my hobbies. When it comes to my art, it's usually fanart or some pencil or pen doodle of an odd creature. However, I seem to do best when I'm drawing horror, gore, or dragons, though I do like to draw characters from animes and books I've read. When it comes to my writing, I'm all over the place. I'm currently working on two stories right now, their titles are as following; Untitled Apocalyptic Fantasy Story(Untitled), and Demons; A Complete Guide to demonic Creatures. I am very excited to continue writing these books, since I think they both have great potential. If you are interested in my work, you can email me through leija.lusas@student.region16ct.org.</article>
         </div>
     </section>
     
